# Beeai-test-agent

./: Dockerfile  README.md  pyproject.toml
docs/architecture/: README.md  diagram.puml
src/beeai_agents/: agent.py
tests/: test_agent.py
