[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beeai-test-agent"
version = "0.1.0"
description = "A test agent built with BeeAI Platform following the Hello World tutorial"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "BeeAI Test Agent" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "acp-sdk>=0.13.0",
]

[project.urls]
"Homepage" = "https://github.com/Matfejbat/Beeai-test-agent"
"Bug Reports" = "https://github.com/Matfejbat/Beeai-test-agent/issues"
"Source" = "https://github.com/Matfejbat/Beeai-test-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/beeai_agents"]

[project.scripts]
server = "beeai_agents.agent:server.run"
