[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beeai-test-agent"
version = "0.2.0"
description = "A test agent built with BeeAI Platform following the Hello World tutorial with enhanced functionality"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "BeeAI Test Agent" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "acp-sdk>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Matfejbat/Beeai-test-agent"
"Bug Reports" = "https://github.com/Matfejbat/Beeai-test-agent/issues"
"Source" = "https://github.com/Matfejbat/Beeai-test-agent"

[tool.hatch.build.targets.wheel]
packages = ["src/beeai_agents"]

[project.scripts]
server = "beeai_agents.agent:server.run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/beeai_agents"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
